made more changes

--- a/app/views/restaurants/edit.erb
+++ b/app/views/restaurants/edit.erb
@@ -3,5 +3,11 @@
   <label for="restaurant_name">Name:</label>
   <input type="text" value="<%=@restaurant.name %>" name="name">
   <br>
+  <label for="restaurant_rating">Rating:</label>
+  <input type="text" value="<%=@restaurant.rating %>" name="rating">
+  <br>
+  <label for="restaurant_Address">Address:</label>
+  <input type="text" value="<%=@restaurant.address %>" name="address">
+  <br>
   <input type="submit" value="submit">
 </form>
