--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -10,4 +10,9 @@
 </form>
 <br>
 <h1><%= @user.name %></h1>
+
 <br>
+<label for="Current Restaurants">Your Current Restaurant List:</label>
+  <ol>
+
+  </ol>
