new db layout and rest can add users

--- a/app/views/error.erb
+++ b/app/views/error.erb
@@ -1,4 +1,6 @@
-<h1> OOPS! </h1>
+<div>
+  <h1> OOPS! </h1>
+</div>
 
-<h1>404 error</h1>
-<h2>Page Does Not Exist</h2>
+<h1>Nothing to see here...</h1>
+<h4>404 error</h4>
