--- a/app/views/restaurants/index.erb
+++ b/app/views/restaurants/index.erb
@@ -4,6 +4,6 @@
 
 <% @restaurants.each do |rest| %>
   <p>
-    <a href= "/restaurants/<%=rest.id%>" ><li><%= rest.name %></li></a>
+    <a href= "/restaurants/<%=rest.id%>" ><li><%= rest.rest_name %></li></a>
   </p>
 <% end %>
