--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -9,10 +9,14 @@
     <a href="/users">See All Users</a>
 
     <form action="/users" method="post">
-      <label for="name">Name:</label>
-      <input type="text" name="name" placeholder="Jon Von Don">
-      <br>
-      <input type="submit" value="Submit">
+      <fieldset>
+        <legend>New User:</legend>
+        <label for="user_name">Name:</label>
+        <input type="text" name="user_name" placeholder="Jon Von Don">
+        <br>
+        <input type="submit" value="Submit">
+      </fieldset>
+
     </form>
 
   </body>
