--- a/app/views/restaurants/edit.erb
+++ b/app/views/restaurants/edit.erb
@@ -1,13 +1,32 @@
-<form method="post" action="/restaurants/<%=@restaurant.id%>">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  <label for="restaurant_name">Name:</label>
-  <input type="text" value="<%=@restaurant.name %>" name="name">
-  <br>
-  <label for="restaurant_rating">Rating:</label>
-  <input type="text" value="<%=@restaurant.rating %>" name="rating">
-  <br>
-  <label for="restaurant_Address">Address:</label>
-  <input type="text" value="<%=@restaurant.address %>" name="address">
-  <br>
-  <input type="submit" value="submit">
-</form>
+<!DOCTYPE html>
+<!Form will have to be deleted>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <form method="post" action="/restaurants/<%=@restaurant.id%>">
+      <input id="hidden" type="hidden" name="_method" value="patch">
+      <label for="restaurant_name">Name:</label>
+      <input type="text" value="<%=@restaurant.rest_name %>" name="name">
+      <br>
+      <label for="restaurant_rating">Rating:</label>
+      <select name="rating">
+        <option value="5">5</option>
+        <option value="4">4</option>
+        <option value="3">3</option>
+        <option value="2">2</option>
+        <option value="1">1</option>
+      </select>
+      <br>
+      <label for="restaurant_Address">Address:</label>
+      <input type="text" value="<%=@restaurant.address %>" name="address">
+      <br>
+
+          <br>
+      <input type="submit" value="submit">
+    </form>
+
+  </body>
+</html>
