--- a/app/views/restaurants/new.erb
+++ b/app/views/restaurants/new.erb
@@ -9,22 +9,27 @@
     <a href="/users/new">Add a User</a>
     <a href="/users">See All Users</a>
     <form class="Restaurant Form" action="/restaurants" method="POST">
-      <label for="Name">Restaurant Name:</label>
-      <input type="text" name="Name">
-      <br>
-      <label for="Rating">Rating:</label>
-      <select name="rating">
-        <option value="5">5</option>
-        <option value="4">4</option>
-        <option value="3">3</option>
-        <option value="2">2</option>
-        <option value="1">1</option>
-      </select>
-      <br>
-      <label for="Address">Address:</label>
-      <input type="text" name="Address">
-      <br>
-      <input type="submit" value="submit">
+        <br>
+        <fieldset>
+          <legend>New Restaurant:</legend>
+          <label for="restaurant_name">Name:</label>
+          <input type="text" name="Name">
+          <br>
+          <label for="Rating">Rating:</label>
+          <select name="rating">
+            <option value="5">5</option>
+            <option value="4">4</option>
+            <option value="3">3</option>
+            <option value="2">2</option>
+            <option value="1">1</option>
+          </select>
+          <br>
+          <label for="Address">Address:</label>
+          <input type="text" name="Address">
+          <br>
+          <input type="submit" value="submit">
+        </fieldset>
+
 
     </form>
   </body>
