--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -2,7 +2,7 @@
 <form method="post" action="/users/<%=@user.id%>">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <label for="user_name">Name:</label>
-  <input type="text" value="<%=@user.name %>" name="name">
+  <input type="text" value="<%=@user.user_name %>" name="user_name">
   <br>
   <input type="submit" value="submit">
 </form>
