--- a/app/views/users/index.erb
+++ b/app/views/users/index.erb
@@ -2,5 +2,5 @@
 <a href="/restaurants/new">Add a Restaurant</a>
 
 <% @users.each do |user| %>
-  <a href= "/users/<%=user.id%>" ><li><%= user.name %></li></a>
+  <a href= "/users/<%=user.id%>" ><ul><%= user.user_name %></ul></a>
 <% end %>
