--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -12,7 +12,7 @@
       <fieldset>
         <legend>New User:</legend>
         <label for="user_name">Name:</label>
-        <input type="text" name="user_name" placeholder="Jon Von Don">
+        <input type="text" name="user[user_name]" placeholder="Jon Von Don">
         <br>
         <input type="submit" value="Submit">
       </fieldset>
