--- a/app/views/restaurants/new.erb
+++ b/app/views/restaurants/new.erb
@@ -13,10 +13,10 @@
         <fieldset>
           <legend>New Restaurant:</legend>
           <label for="restaurant_name">Name:</label>
-          <input type="text" name="Name">
+          <input type="text" name="restaurant[rest_name]">
           <br>
           <label for="Rating">Rating:</label>
-          <select name="rating">
+          <select name="restaurant[rating]">
             <option value="5">5</option>
             <option value="4">4</option>
             <option value="3">3</option>
@@ -25,7 +25,7 @@
           </select>
           <br>
           <label for="Address">Address:</label>
-          <input type="text" name="Address">
+          <input type="text" name="restaurant[address]">
           <br>
           <input type="submit" value="submit">
         </fieldset>
