--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,8 +1,14 @@
 
+
+
 <form method="post" action="/users/<%=@user.id%>">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <label for="user_name">Name:</label>
-  <input type="text" value="<%=@user.user_name %>" name="user_name">
+  <input type="text" value="<%=@user.user_name %>" name="user[user_name]">
   <br>
   <input type="submit" value="submit">
+</form>
+<form action="/users/<%=@user.id%>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete User">
 </form>
