--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
-<a href="/users/new">Create New User</a>
-<a href="/restaurants/new">Create New Restaurant</a>
-<a href="/users">See All Users</a>
-<a href="/users/<%=@user.id%>/edit">Edit User</a>
+<a href="/users/<%=@user.id%>/edit">Edit Profile</a>
 
-<form action="/users/<%=@user.id%>/delete" method="post">
-  <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="submit" value="Delete User">
-</form>
+<a href="/users/new">Create User</a>
+<a href="/users">Find Users</a>
+
+<a href="/restaurants/new">Create Restaurant</a>
+<a href="/restaurants">Find Restaurant</a>
+
+
 <br>
 <h1><%= @user.user_name %></h1>
-
+<form action="/users/<%=@user.id%>" method="POST">
+    <select name="users[restaurant_id]" type="text">
+        <%Restaurant.all.each do |rest|%>
+            <option value="<%=rest.id%>"><%=rest.rest_name%></option>
+        <%end%>
+    </select>
+    <button type="submit" value="add">add to my list</button>
+</form>
 <br>
-<label for="Current Restaurants">Your Current Restaurant List:</label>
-    <% @user.restaurants.each do |rt| %>
-    <p><%= rt.rest_name %></p>
-    <% end %>
+<fieldset>
+  <legend>Your Current Restaurant Wish List</legend>
+      <% @user.restaurants.each do |rt| %>
+      <ul><%= rt.rest_name %></ul>
+      <% end %>
+</fieldset>
